# obcx-plugin-bridge

./: CLAUDE.md  CMakeLists.txt  example_plug_config.toml  plugin.toml
dependency/: CMakeLists.txt  config.cpp  media_processor.cpp  path_manager.cpp  retry_queue_manager.cpp
dependency/database/: manager.cpp  manager_create.cpp  manager_delete.cpp  manager_insert.cpp  manager_query.cpp  manager_update.cpp  manager_utils.cpp
dependency/qq/: command_handler.cpp  event_handler.cpp  handler.cpp  media_processor.cpp  message_formatter.cpp
dependency/telegram/: command_handler.cpp  event_handler.cpp  handler.cpp  media_processor.cpp  message_formatter.cpp
include/: config.hpp  media_processor.hpp  path_manager.hpp  retry_queue_manager.hpp
include/database/: manager.hpp
include/qq/: command_handler.hpp  event_handler.hpp  media_processor.hpp  message_formatter.hpp  qq_handler.hpp
include/telegram/: command_handler.hpp  event_handler.hpp  handler.hpp  media_processor.hpp  message_formatter.hpp
qq_to_tg/: CMakeLists.txt  qq_to_tg_plugin.cpp  qq_to_tg_plugin.hpp
tests/: CMakeLists.txt  qq_to_tg_retry_timeout_test.cpp  tg_to_qq_retry_timeout_test.cpp
tg_to_qq/: CMakeLists.txt  tg_to_qq_plugin.cpp  tg_to_qq_plugin.hpp
